# Lead_Generation_Agent

./: .gitignore  README.md  clear_google_tokens.py  credentials.json  env.example  pyproject.toml  requirements.txt
data/: lead_generation_agent.db
docs/: API_REFERENCE.md  ARCHITECTURE.md  GOOGLE_OAUTH2_FLOW.md  GOOGLE_WORKSPACE_SETUP.md  SETUP.md
memory/: long_term.db
memory/entity/: chroma.sqlite3
memory/short_term/: chroma.sqlite3
mlflow/0/: meta.yaml
mlflow/931850152383452133/: meta.yaml
mlflow/931850152383452133/8429906ec17545b8b749e934392f47e0/: meta.yaml
mlflow/931850152383452133/aeeb213a446a4597af1afc2fb3aba8c2/: meta.yaml
mlflow/931850152383452133/ffb05c26a8b64b8a949dbc82f703c74d/: meta.yaml
mlruns/0/: meta.yaml
mlruns/987862832452413004/: meta.yaml
mlruns/987862832452413004/03c279601b8b4d9786310b013364b86d/: meta.yaml
mlruns/987862832452413004/06fc5d71a0d9455a98d861e129f64fc2/: meta.yaml
mlruns/987862832452413004/0a2ae8fd00cb4866b6a789de051278b4/: meta.yaml
mlruns/987862832452413004/14ec84e237cc43ab8cfaa0094f97c23d/: meta.yaml
mlruns/987862832452413004/20b7f93a25c541c08ef7fe1184cc50f7/: meta.yaml
mlruns/987862832452413004/23cd949b793e427dada72e72fe4d819a/: meta.yaml
mlruns/987862832452413004/34d3f4a2f7f344f086520cb517ded95b/: meta.yaml
mlruns/987862832452413004/363bbc93d66b4850968101c6a710cacb/: meta.yaml
mlruns/987862832452413004/3b9a1738e1a848e4b5a6a987cd6b3e81/: meta.yaml
mlruns/987862832452413004/3e711cb638f8415ca9170dd7daa40e34/: meta.yaml
services/: auth_service.py
src/lead_generation_agent/: main.py
(+276 files in other folders)
